<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        style="@style/DialogTitleStyle"
        android:id="@+id/txt_title"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:singleLine="true"
        android:gravity="center"
        android:text="@string/name_title" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <EditText
            style="@style/EditTextStyle"
            android:id="@+id/edt_name"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_bg"
            android:singleLine="true"
            android:hint="@string/input_name" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#ffcccccc" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="horizontal">

        <Button
            style="@style/DialogButtonStyle"
            android:id="@+id/btn_yes"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/dialog_left_btn_bg"
            android:text="@string/set" />


    </LinearLayout>
</LinearLayout>